	* Removed the 'City' and 'State' fields from the Pick Fields
	dialog for the 'Affiliate by Program' report.
2015-01-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.2.3.
2015-01-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'davit/affiliatesbyprogram_report.cpp' that
	caused contact information to be incorrect in the
	'Affiliates/Admin Contacts by Program' report.
2015-01-23 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.2.4.
2015-01-30 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'davit/affiliatesbyprogram_report.cpp' that caused
	programs with an ending time of midnight to be reported as ending
	at 11 PM.
2015-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up warnings in 'configure.ac' and 'Makefile.am'.
	* Added a 'qt3-MySQL' dependency in 'davit.spec.in'.
2016-07-28 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'acinclude.m4'.
2016-07-28 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'OpenofficePath=" parameter to the Config file.
2025-05-10 Fred Gleason <fredg@paravelsystems.com>
	* Updated the 'AR_GCC_TARGET()' and 'AR_GET_DISTRO()' autoconf
	macros.
2025-05-10 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up makefiles.
2025-05-24 Fred Gleason <fredg@paravelsystems.com>
	* Completed rough port to Qt4.
2025-05-24 Fred Gleason <fredg@paravelsystems.com>
	* Completed rough port to Qt6.
2025-05-26 Fred Gleason <fredg@paravelsystems.com>
	* Modifed davit(1) to create home directory configuration
	automatically at startup.
	* Added a 'DvtSqlQuery' class in 'lib/'.
2025-05-29 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'Login' dialog in davit(1).
2025-05-29 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the user management dialogs in davit(1) to use a model.
2025-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'List Affiliates' and 'Edit Affiliate' dialogs in
	davit(1).