@@ -46,6 +46,7 @@ SOURCES += affiliatesbyprogram_report.cpp
 SOURCES += affiliatelistmodel.cpp
 SOURCES += arbitron_report.cpp
 SOURCES += contact.cpp
+SOURCES += contactlistmodel.cpp
 SOURCES += contactlistview.cpp
 SOURCES += createdb.cpp
 SOURCES += davit.cpp
@@ -95,6 +96,7 @@ HEADERS += add_user.h
 HEADERS += affidavit_picker.h
 HEADERS += affiliatelistmodel.h
 HEADERS += contact.cpp
+HEADERS += contactlistmodel.h
 HEADERS += contactlistview.h
 HEADERS += createdb.h
 HEADERS += davit.h
